--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,16 +1,32 @@
-<h1>Lista de Productos Real Time</h1>
+<h1 id="main-title">Lista de Productos</h1>
 
-<div style="display: flex; gap:15px">
+<div id="products-container" >
 {{#each products}}
 
-    <div style="border: 1px solid black;">
-        <p>Title: {{this.title}}</p>
-        <p>Description: {{this.description}}</p>
-        <p>code: {{this.code}}</p>
-        <p>Price: {{this.price}}</p>
-        <p>Stock: {{this.stock}}</p>
-        <p>Category: {{this.category}}</p>
+    <div class="product">
+        <p class="product-property">Title: {{this.title}}</p>
+        <p class="product-property">Description: {{this.description}}</p>
+        <p class="product-property">code: {{this.code}}</p>
+        <p class="product-property">Price: {{this.price}}</p>
+        <p class="product-property">Stock: {{this.stock}}</p>
+        <p class="product-property">Category: {{this.category}}</p>
     </div>
 
 {{/each}}
 </div>
+
+<div id="form-container">
+    <form action="" id="form">
+        <input type="text" name="title" placeholder="title" id="title">
+        <input type="text" name="description" placeholder="description" id="description">
+        <input type="text" name="code"  placeholder="code"id="code">
+        <input type="text" name="price" placeholder="price" id="price">
+        <input type="text" name="stock" placeholder="stock" id="stock">
+        <input type="text" name="category" placeholder="category" id="category">
+        <input type="text" name="thumbnail" placeholder="thumbnail" id="thumbnail">
+    </form>
+    <button id="button-add-product">Add Product</button>
+</div>
+
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/realTimeProducts.js"></script>
