--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,47 +1,49 @@
-*, body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*,
+body {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-content: center;
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: center;
+	align-content: center;
 
-    background-color: #252525;
+	text-align: center;
+
+	background-color: #252525;
+
+	color: wheat;
 }
 
 #main-title {
-    margin: 10px;
+	margin: 10px;
 
-    text-align: center;
-    font-size: 3rem;
-    color: beige;
+	text-align: center;
+	font-size: 3rem;
+	color: beige;
 }
 
 #products-container {
-    width: 80vw;
+	width: 80vw;
 
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-content: center;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-content: center;
 }
 
 .product {
-    margin: 5px;
-    padding: 5px;
+	margin: 5px;
+	padding: 5px;
 
-    border-radius: 10px;
-    color: beige;
-    background-color: #757575;
+	border-radius: 10px;
+	color: beige;
+	background-color: #757575;
 }
 
 .product-property {
-    font-size: 1.3rem;
+	font-size: 1.3rem;
 }
-
-
-
