--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -11,6 +11,7 @@
 </form>
 
 <p>Si no estas registrado hazlo <a href="/signup">aqui</a><p>
+<p>puedes ingresar a traves de <a href="localhost:3000/auth/github">GITHUB</a></p>
 
 <script src="/js/login.js"></script>
 
